skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
/* CSS Document */
body{
	font-family: "pragmatica-web-condensed", Arial, Helvetica, sans-serif;
	font-style:normal;
	font-size:100%;
	line-height:1.6;

	background:none !important;
  background-image   : url(/media/store-media/connections.store.wsu.edu/skin/background-strip.png),
                       url(/media/store-media/connections.store.wsu.edu/skin/background.jpg) !important;

  background-repeat  : no-repeat,
                       repeat-x;

  background-position: 100% top,
                       center top;
}
main{
	background: url(/media/store-media/connections.store.wsu.edu/skin/home-main-background.jpg);
	background-color:#fff;
	background-repeat: no-repeat;
	background-position:center bottom;
    background-size: 100% auto;
	position: relative;
}
section#siteID{
	/*background:none !important;*/
	background-image : url(/media/store-media/connections.store.wsu.edu/skin/header-bk.jpg);
	background-color:#38424a;
	background-repeat: no-repeat;
	background-position:left top;
    background-size: 100% auto;
	box-sizing:border-box;
	border:2px solid #da1a33;
	border-top:none;
    z-index: 100;
}
#spine.darkest #glue:before{
	background:url(/media/store-media/connections.store.wsu.edu/skin/spine_background.png) repeat center top !important;
}
.quick-access{
	background:none;
    position: absolute;
    width: 100%;
    right: 31px;
    top: 54px;
	z-index:100;
}
.quick-access .links{
	padding:0px;
}
.quick-access .links,
.quick-access .links li{
	display:inline-block;
}
.quick-access .links
li{
	padding:0 0px 0 1px;
}
.quick-access .links a{
	color:#ddd;
	background:none;
    position: relative;
	width:82px;
	height:83px;
	color:#FFFFFF;
	display:inline-block;
	content:"";
}
.quick-access .links a span{
	width:100%;
	height:100%;
	position:absolute;
    top: calc( 50% - 15px - 21px );
    left: -8px;
    z-index: 1;
    width: 82px;
    text-align: center;
    font-size: 15px;
}
.quick-access .links a:before{
    transform: skew(20deg);
    -webkit-transform: skew(20deg);
    -moz-transform: skew(20deg);
    -ms-transform: skew(20deg);
    -o-transform: skew(20deg);
    background-color: #da1a33;
	
	border:2px solid #da1a33;
	position:absolute;
    top: 0px;
    left: 0px;
    z-index: 0;
    width: 82px;
    height: 75px;
	content:"";
}
.quick-access .links a:hover:before{
    background-color:#39424b;
}

.quick-access .links a{
	padding:0 7px 0 0;
	/*background:url(http://store.wsu.dev/skin/frontend/wsu_base/default/images/bkg_pipe1.gif) no-repeat 100% 50%*/
}
.quick-access .links li.last a{padding:0;background:none}
.quick-access .links a span:before{
	display: inline-block;
	font: normal normal normal 14px/1 FontAwesome;
	font-size: inherit;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	transform: translate(0, 0);	
	
	color:#39424b;
	position: absolute;
    right: 2px;
    top: 23px;
    font-size: 50px;
	z-index:1;
}
.quick-access .links a:hover span:before{
	color:#fff;
}
.quick-access .links a[href*="customer/account/create"] span:before{
	content: "\f090";
}
.quick-access .links a[href*="customer/account/login"] span:before{
	content: "\f090";
}
.quick-access .links a[href*="checkout"] span:before{
	content: "\f046";
}
.quick-access .links a[href*="checkout/cart"] span:before{
	content: "\f07a";
}

/*%%%-FOOTER-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
main footer{
	padding:0px !important;
	position:absolute;
	bottom:0px;
	width:100%;
	height:36px;
	background:#d5151f;
	
}
#site-global-footer{
	background: url(/media/store-media/connections.store.wsu.edu/skin/footer-bk.jpg);
}
#site-global-footer ul{
	padding: 0;
  margin: 0;
  list-style: none;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row wrap;
  justify-content: space-around;
}
#site-global-footer ul li{
  width: 20%;
  height: 36px;
  color: white;
  font-weight: bold;
  font-size: 15px;
  text-align: center;
}
#site-global-footer ul li a{
	color:#fff;
    width: 100%;
    display: inline-block;
    height: 36px;
    line-height: 36px;
}
#site-global-footer ul li a:hover{
	background:url(/media/store-media/connections.store.wsu.edu/skin/spine_background.png) repeat center top !important;
}



/* mass product form */
	#mass_products{padding: 0;}
/* Product list blocks */
	.products-list,
	.products-list li{ list-style:none;}
	.products-list li.item {
	  border: 1px solid rgba(91,91,91,0.63);
	  border-radius: 9px;
	  background:rgba(241,241,241,0.90);
	  padding:15px 11px;
	  margin-bottom:15px;
	  position:relative;
	  margin-left:0px;
	}
	.products-list li.item.last {border: 1px solid rgba(91,91,91,0.63);}
	.products-list .product-image{ width:100%; height:auto; max-height:100%;}
	.products-list .product-shop{ margin:0px;}
	[name="goingToEvent"] {display: none !important;visibility: hidden;}
	.template{display:none;}
	.products-list h2.product-name {font-size: 1.75em;font-weight: bold;}
	.products-list h2.product-name a{ text-decoration:none; cursor:default;}
	
	.blockHeader {font-size: 1.5em;font-weight: bold;}
	.blockHeader i{font-style:normal;}
	.column.cart_action_area {text-align: right !important;}
	.regular-price .price {color: #396f00;font-size: 1.5em;font-weight: bold;}
	.products-list .price-box {float:none;}
	.mass_item.active_item{background-color:#e3dfcd !important;border-color:#ada400 !important}
	.product-image-wrapper img{ margin-top: 20px;}
	input.full { width:100%}
	
	/* Guest blocks */
	.attendence_block{display:none; clear:both}
	.attendence_block{border-top:0.1em solid #393215;padding: 1em 0;}
	.active_item .attendence_block{display:block;}
	
	.guest_block label {display: block;}
	
	/* buttons and links */
	.remove_guest {float: right;font-size: 0.55em;}
	.copy_guest {display:none !important;}
	.copy_guest.can_copy {display:inline-block !important;font-size: 0.75em;padding: 0.1em 0.5em !important;}
	
	.validation_overlay{
		display:none;
		position: absolute;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
		background-color: rgba(0,0,0,0.5);
		z-index: 10;}
	.validation_overlay.active{display:block;}
	.access_form {
	  background-color: #ffb81c;
	  border-radius: 5px;
	  left: 50%;
	  margin-left: -17.5%;
	  margin-top: -6.25%;
	  min-height: 55px;
	  padding: 0 15px;
	  position: absolute;
	  text-align: center;
	  top: 27%;
	  width: 30%;
	  z-index: 11;
	}

/* CART */
.cart .totals {
  background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
  padding: 0;
}




/* for the moment REMEBER to remove */
.opc-wrapper-opc .buttons-set .button span,
.opc-wrapper-opc .discount-block .buttons-set .button span {
	background:transparent none;
  border-radius: 3px;
  height: 45px;
  line-height: 15px !important;
  padding: 0 !important;
  width: 100%;
}
.opc-wrapper-opc .buttons-set .button span span,
.opc-wrapper-opc .discount-block .buttons-set .button span span {
	background:transparent none;
  color: #494949 !important;
  font-size: 18px;
  font-weight: bold;
  text-shadow: 0 1px 1px #02484f;
  text-transform: uppercase;
}

.shipping-method-block{position:absolute !important; top:-9999em  !important; left:-9999em  !important;}
* .opc-wrapper-opc .payment-block { margin-top:0px !important;}

#check_out_products {
  background-color: #3f6b72;
  color: #e5e5e5;
  font-size: 1.25em;
  font-weight: bold;
  text-align: center;
}

#check_out_products.fixed {z-index: 9;position: fixed;bottom: 5px;}

#check_out_products:hover{background-color:#00a5bd;}
#mass_products{position:relative;}


/*%%%-homepage-banners-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
#banner_area{
	position: relative;
    width: calc( 100% - 120px );
    margin: 50px;
	margin-bottom:25px;
    border: 10px solid #fff;
}
#homepage_banners{
	z-index:1;
}
#homepage_banners img{
	width:100%;
}
#banner-pager{
	position:absolute;
	right:0px;
	bottom:0px;
	z-index:2;
}
#banner-pager:before{
	display:block;
	width: 0; 
	height: 0; 
	border-bottom: 115px solid #fff; 
	border-left: 115px solid transparent; 	
	position:absolute;
	right:0px;
	bottom:0px;
	z-index:1;
	content:"";
}
#banner-pager:after{
	display:block;
	width: 0; 
	height: 0; 
	border-bottom: 100px solid #da1a32; 
	border-left: 100px solid transparent; 	
	position:absolute;
	right:0px;
	bottom:0px;
	z-index:1;
	content:"";
}
#banner-pager span{
    z-index: 2;
    position: relative;
    font-size: 41px;
    padding-top: 24px;
	color:#fff;
	cursor:pointer;
}
#banner-pager span:hover,#banner-pager span.cycle-pager-active{
	color:#38424a;
}

/*%%--home_page_cats--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%*/
#home_page_cats{
	margin: 0px 50px;
	margin-bottom:25px;
}
#home_page_cats li{
	
}
#home_page_cats li a{
	box-sizing:border-box;
	border:10px solid #fff;
	padding: 0px;
	display: inline-block;
}
#home_page_cats li:first-of-type {
	
}
#home_page_cats li img{
	width:100%;
}

